UtahLiveDataTest/src/objects/StrategicPlanServiceArea__c.object
<CustomObject>
    <description>[Business] Association of a Strategic Plan with the Service Area</description>
    <fields>
        <fullName>HideEditBtn__c</fullName>
        <description>Logic for Hiding Edit Button</description>
        <formula>OR(AND(StrategicPlan__c!=null,StrategicPlan__r.HideEditDelete__c),
ServiceArea__r.HideEditDelete__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logic for Hiding Edit Button</inlineHelpText>
        <label>Hide Edit Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipName>StrategicPlanServiceArea</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceAreaAgency__c</fullName>
        <formula>Text(ServiceArea__r.CoreServiceArea1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Core Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAreaOwner__c</fullName>
        <formula>ServiceArea__r.Owner__r.FirstName  + &apos; &apos; +  ServiceArea__r.Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceArea__c</fullName>
        <label>Service Area</label>
        <referenceTo>ServiceArea__c</referenceTo>
        <relationshipName>StrategicPlanServiceArea</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StrategicPlanAgency__c</fullName>
        <formula>StrategicPlan__r.Agency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategic Plan Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrategicPlanOwner__c</fullName>
        <formula>StrategicPlan__r.Owner:User.FirstName  + &apos; &apos; +  StrategicPlan__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategic Plan Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrategicPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategic Plan</label>
        <referenceTo>StrategicPlan__c</referenceTo>
        <relationshipName>StrategicPlanServiceArea</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StrategyTitle__c</fullName>
        <formula>HYPERLINK((&apos;/&apos; +  StrategicPlan__r.Id ),  StrategicPlan__r.StrategyTitle__c,  &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategy Title</label>
        <type>Text</type>
    </fields>
    <label>Strategic Plan Project Area</label>
    <nameField>
        <displayFormat>SPSR-{000}</displayFormat>
        <label>Strategic Plan Service Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Plan Project Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>